--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- Hero Section (Just a Picture/Banner) -->
     <section id="top" class="w-full relative overflow-hidden bg-gray-50">
         <!-- Using a different uploaded image as a large, striking banner visual -->
-        <img src="Images/Screenshot from 2025-10-30 13-51-01.png" 
+        <img src="Images/ChatGPT Image Nov 4, 2025, 10_27_53 AM.png" 
              alt="Pride Africa Security Banner Image" 
              class="w-full h-[300px] md:h-[400px] object-cover object-center shadow-xl border-b-4 border-accent-rich-gold"
              onerror="this.onerror=null; this.src='https://placehold.co/1280x400/DC2626/FFFFFF?text=PRIDE+AFRICA+SECURITY+VISUAL';">
